fixed help menu jumping when body does not start with header

--- a/output/help/html/help_style.css
+++ b/output/help/html/help_style.css
@@ -13,6 +13,7 @@ h2 {
 	font-size: 1.5em;
 	border-bottom: 1px solid #eaecef;
 	margin-bottom: 16px;
+	margin-top: 16px;
 	font-weight: 600;
 	line-height: 1.25;
 }
